testsuite/tests/typing-extension-constructor/test.ml.reference

#                         type t = ..
# type t += A
#   - : extension_constructor = <abstr>
# - : extension_constructor = <abstr>
#   type extension_constructor = int
#   Characters 2-28:
  ([%extension_constructor A] : extension_constructor);;
   ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type extension_constructor/16
       but an expression was expected of type
         extension_constructor/1214 = int
# 
